# career_assistant

./: .dockerignore  .env.template  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  ruff.toml  supabase_schema.sql
app/: globals.css  layout.tsx  page.tsx
backend/: README.md  cleanup_old_cache.py  cleanup_old_pdfs.py  list_models.py  main.py  pyproject.toml  requirements.txt
backend/lib/: document_processor.py  gemini_client.py  pdf_generator.py  supabase_client.py
components/: FileInput.tsx  ProgressTracker.tsx  ResultsDisplay.tsx
nginx/: nginx.conf
