[tool.poetry]
name = "career-assistant-backend"
version = "1.0.0"
description = "Backend API for Career Assistant application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lib"}, {include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
supabase = "2.0.0"
google-generativeai = ">=0.8.0"
reportlab = "4.0.7"
python-dotenv = "1.0.0"
httpx = ">=0.24.0,<0.25.0"
pydantic = "2.5.0"
aiofiles = "23.2.1"
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
# Select specific rules to enable/disable if needed
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
